load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//bazel:copts.bzl", "copts")

cc_binary(
    name = "check_module_header",
    srcs = ["check_module_header.cc"],
    copts = copts,
    target_compatible_with = ["@platforms//os:linux"],  # abseil has a linker error on windows
    deps = ["@com_google_absl//absl/strings"],
)
