load("@rules_cc//cc:defs.bzl", "cc_test")
load("@ecsact_runtime//bazel:copts.bzl", "copts")

cc_test(
    name = "for_each_macros_test",
    srcs = ["for_each_macros_test.cc"],
    copts = copts,
    deps = [
        "@ecsact_runtime",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
