load("@ecsact_runtime//bazel:copts.bzl", "copts")
load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "for_each_macros_test",
    srcs = ["for_each_macros_test.cc"],
    copts = copts,
    deps = [
        "@ecsact_runtime",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "c-compliant",
    srcs = ["c-compliant.c"],
    # intentionally not set! shouldn't need any flags for c compile
    # copts = copts,
    deps = [
        "@ecsact_runtime",
    ],
)

cc_test(
    name = "ecsact-id-std-format",
    srcs = ["ecsact-id-std-format.cc"],
    copts = copts,
    deps = [
        "@ecsact_runtime",
    ],
)
