module(name = "ecsact_runtime_test")

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "platforms", version = "0.0.7")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "toolchains_llvm", version = "0.10.3")
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
bazel_dep(name = "ecsact_runtime")

local_path_override(
    module_name = "ecsact_runtime",
    path = "..",
)

git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "204aa593e002cbd177d30f11f54cff3559110bb9",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(llvm_version = "16.0.4")

use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")

