load("@rules_cc//cc:defs.bzl", "cc_test")

exports_files(
    ["ecsact_codegen_plugin_test.cc"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        "//:ecsact_runtime",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
