load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//visiblity:public"])

exports_files([
    "async_reference.hh",
    "async_reference.cc",
    "async.cc",
])

cc_library(
    name = "async_reference",
    srcs = [
        "async_reference.cc",
        "util/util.cc",
    ],
    hdrs = [
        "async_reference.hh",
        "util/util.hh",
    ],
    copts = copts,
    visibility = ["//visibility:public"],
    deps = [
        "//:async",
        "//:core",
        "//reference/async_reference/util:types",
    ],
)

cc_library(
    name = "async",
    srcs = ["async.cc"],
    copts = copts,
    defines = ["ECSACT_ASYNC_API_EXPORT="],
    visibility = ["//visibility:public"],
    deps = [
        ":async_reference",
        "//:async",
    ],
)
