load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//visiblity:public"])

exports_files([
    "async_reference.hh",
    "async_reference.cc",
    "async.cc",
])

cc_library(
    name = "async_reference",
    srcs = ["async_reference.cc"],
    hdrs = ["async_reference.hh"],
    copts = copts,
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [
        "//:async",
        "//:core",
        "//reference/async_reference/callbacks:async_callbacks",
        "//reference/async_reference/callbacks:execution_callbacks",
        "//reference/async_reference/detail/c_execution_options",
        "//reference/async_reference/entity_manager",
        "//reference/async_reference/tick_manager",
        "//reference/async_reference/util",
        "//reference/async_reference/util:types",
    ],
)

cc_library(
    name = "async",
    srcs = ["async.cc"],
    copts = copts,
    defines = ["ECSACT_ASYNC_API_EXPORT="],
    visibility = ["//visibility:public"],
    deps = [
        ":async_reference",
        "//:async",
    ],
)

filegroup(
    name = "sources",
    srcs = glob([
        "**/*.cc",
        "**/*.hh",
    ]) + [
        "//reference/async_reference/callbacks:callback_source",
        "//reference/async_reference/detail/c_execution_options:c_execution_source",
        "//reference/async_reference/entity_manager:entity_source",
        "//reference/async_reference/tick_manager:tick_source",
        "//reference/async_reference/util:util_source",
        "//reference/serialize_reference:serialize_source",
    ],
    visibility = ["//visibility:public"],
)
