load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_ecsact//ecsact:defs.bzl", "ecsact_codegen")
load("@ecsact_runtime//bazel:copts.bzl", "copts")
load("@ecsact_rt_entt//runtime:index.bzl", "ecsact_entt_runtime")

ecsact_entt_runtime(
    name = "async_test_core_module_runtime",
    srcs = ["async_test.ecsact"],
    ECSACT_ENTT_RUNTIME_PACKAGE = "::async_test::package",
    ECSACT_ENTT_RUNTIME_USER_HEADER = "async_test.ecsact.meta.hh",
    system_impls = ["dynamic"],
)

ecsact_codegen(
    name = "async_test_support_generated_headers",
    srcs = ["async_test.ecsact"],
    plugins = [
        "@ecsact//codegen_plugins:cpp_header",
        "@ecsact//codegen_plugins:cpp_systems_header",
        "@ecsact//codegen_plugins:systems_header",
        "@ecsact//codegen_plugins:cpp_systems_source",
        "@ecsact_runtime//reference/serialize_reference/codegen",
    ],
)

cc_test(
    name = "async",
    srcs = [
        "async_ref_test.cc",
        ":async_test_support_generated_headers",
        "@ecsact_runtime//reference/async_reference:async.cc",
        "@ecsact_runtime//reference/async_reference:async_reference.cc",
        "@ecsact_runtime//reference/async_reference:async_reference.hh",
    ],
    copts = copts,
    deps = [
        ":async_test_core_module_runtime",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@ecsact_runtime//:async",
        "@ecsact_runtime//:core",
        "@ecsact_runtime//:dynamic",
        "@ecsact_runtime//reference/async_reference:async",
        "@ecsact_runtime//reference/serialize_reference",
    ],
)
