load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_ecsact//ecsact:defs.bzl", "ecsact_codegen")
load("@ecsact_runtime//bazel:copts.bzl", "copts")
load("@ecsact_rt_entt//runtime:index.bzl", "ecsact_entt_runtime")

ecsact_entt_runtime(
    name = "serialize_test_core_module_runtime",
    srcs = ["serialize_test.ecsact"],
    ECSACT_ENTT_RUNTIME_PACKAGE = "::serialize_test::package",
    ECSACT_ENTT_RUNTIME_USER_HEADER = "serialize_test.ecsact.meta.hh",
    system_impls = ["dynamic"],
)

ecsact_codegen(
    name = "serialize_test_generated",
    srcs = ["serialize_test.ecsact"],
    plugins = [
        "@ecsact//codegen_plugins:cpp_header",
        "@ecsact_runtime//reference/serialize_reference/codegen",
    ],
)

cc_test(
    name = "serialize",
    srcs = [
        "serialize_test.cc",
        ":serialize_test_generated",
        "@ecsact_runtime//reference/serialize_reference:serialize_source",
    ],
    copts = copts,
    defines = [
        "ECSACT_SERIALIZE_API=",
        "ECSACT_CORE_API=",
    ],
    deps = [
        ":serialize_test_core_module_runtime",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@ecsact_runtime//:common",
        "@ecsact_runtime//:serialize",
    ],
)
