load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

cc_library(
    name = "execution_callbacks",
    srcs = ["execution_callbacks.cc"],
    hdrs = ["execution_callbacks.hh"],
    copts = copts,
    local_defines = [
        "ECSACT_CORE_API=",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:core",
        "//reference/async_reference/util:types",
    ],
)

cc_library(
    name = "async_callbacks",
    srcs = ["async_callbacks.cc"],
    hdrs = ["async_callbacks.hh"],
    copts = copts,
    visibility = ["//visibility:public"],
    deps = [
        "//:core",
        "//reference/async_reference/util",
        "//reference/async_reference/util:types",
    ],
)
