load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

cc_library(
    name = "execution_callbacks",
    srcs = ["execution_callbacks.cc"],
    hdrs = ["execution_callbacks.hh"],
    copts = copts,
    local_defines = [
        "ECSACT_CORE_API=",
        "ECSACT_SERIALIZE_API=",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:core",
        "//reference/async_reference/util:types",
        "//reference/serialize_reference",
    ],
)

cc_library(
    name = "async_callbacks",
    srcs = ["async_callbacks.cc"],
    hdrs = ["async_callbacks.hh"],
    copts = copts,
    visibility = ["//visibility:public"],
    deps = [
        "//:core",
        "//reference/async_reference/util",
        "//reference/async_reference/util:types",
    ],
)

filegroup(
    name = "callback_source",
    srcs = glob([
        "**/*.hh",
        "**/*.cc",
    ]),
    visibility = [
        "//reference/async_reference:__pkg__",
    ],
)
